add q14 to domain_two_questions_1-10.html

--- a/html/domain_two_questions_1-10.html
+++ b/html/domain_two_questions_1-10.html
@@ -74,11 +74,11 @@
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-    let x = 10;
+let x = 10;
 
-    x = "dog";
+x = "dog";
 
-    console.log(x);
+console.log(x);
  
  Q: Which of the following statements is correct?
  
@@ -108,9 +108,9 @@ dog</pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-    let a = 10.50
-    let b = 180
-    alert('a ' + typeof (a) + ' b ' + typeof (b));
+let a = 10.50
+let b = 180
+alert('a ' + typeof (a) + ' b ' + typeof (b));
  
  Q: Which of the following statements is correct?
  
@@ -138,11 +138,6 @@ dog</pre><!-- wide-view -->
 a number b number</pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
 a number b number</pre><!-- wide-view -->
-                        <!--ususally inserted before details-console end tag-->
-                        <dl class="details-dl">
-                            <dt>Note</dt>
-                            <dd>INSERT TEXT</dd>
-                        </dl>
                     </details><!--details CONSOLE -->
                 </article>
 
@@ -151,8 +146,44 @@ a number b number</pre><!-- wide-view -->
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE
-</pre><!-- code-content -->
+let message = "Ship"
+message = " in a bottle."
+console.log(message);
+
+let message2 = "What's good for the goose"
+message2.concat(" is good for the gander.");
+console.log(message2);
+
+let message3 = "An apple a day "
+message3 = message3 + "keeps the doctor away.";
+console.log(message3);
+
+let message4 = "One two ";
+message4 = "buckle my shoe.";
+console.log(message4);
+
+
+Q: Which of the following statements is correct?
+
+
+A: in a bottle.
+What's good for the goose is good for the gander.
+An apple a day keeps the doctor away.
+buckle my shoe.
+
+
+B: in a bottle.
+What's good for the goose
+An apple a day keeps the doctor away.
+buckle my shoe.
+
+
+C: Only details of a syntax error(s) are displayed in the console.
+
+D: Ship in a bottle.
+What's good for the goose is good for the gander.
+An apple a day keeps the doctor away.
+One two buckle my shoe </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -160,11 +191,23 @@ INSERT CODE
                     <details open><!--Details CONSOLE -->
                         <summary class="details-console-summary">[JavaScript Inserts]</summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-</pre><!-- small-view -->
+B:
+  in a bottle.
+  What's good for the goose
+  An apple a day keeps the doctor away.
+  buckle my shoe </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-</pre><!-- wide-view -->
+B:
+  in a bottle.
+  What's good for the goose
+  An apple a day keeps the doctor away.
+  buckle my shoe </pre><!-- wide-view -->
+
+                        <!--ususally inserted before details-console end tag-->
+                        <dl class="details-dl">
+                            <dt>Note
+                            <dd>Q14
+                        </dl>
                     </details><!--details CONSOLE -->
                 </article>
 
