create, hook-up and populate array_parts.html update content in tofixed.html

--- a/html/tofixed.html
+++ b/html/tofixed.html
@@ -186,8 +186,10 @@ tp
                     <details open><!--details CODE-->
                         <summary class="details-code-summary">[JavaScript Inserts]</summary>
                         <pre class="details-code-aclass">
-INSERT CODE TWO
-  </pre><!-- code-content -->
+const mya =[1,2,10,20,3, 5, 30]
+ const myaf = mya.filter(x=>x>=10)
+ mya
+ myaf </pre><!-- code-content -->
                     </details><!--details CODE-->
 
                     <br class="small-view">
@@ -198,11 +200,11 @@ INSERT CODE TWO
                             [JavaScript Inserts]
                         </summary>
                         <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT TWO (small view) 
-</pre><!-- small-view -->
+1, 2, 10, 20, 3, 5, 30 ]
+[ 10, 20, 30 ] </pre><!-- small-view -->
                         <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT TWO (wide view) 
-</pre><!-- wide-view -->
+1, 2, 10, 20, 3, 5, 30 ]
+[ 10, 20, 30 ]</pre><!-- wide-view -->
                     </details><!--details CONSOLE -->
 
                 </article>
