populate else_if.html with example

--- a/html/else_if.html
+++ b/html/else_if.html
@@ -63,10 +63,17 @@
         <article>
           <noscript><span>This Web Site requires JavaScript!</span></noscript>
           <h1 class="count">Introduction</h1>
-          <p>
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusantium, suscipit odio? Obcaecati
-            repellendus nesciunt adipisci ratione ducimus dolorem ipsa dolores?
-          </p>
+          <pre class="details-code-aclass">
+if (condition1)
+  statement1
+else if (condition2)
+  statement2
+else if (condition3)
+  statement3
+// …
+else
+  statementN
+                      </pre><!-- code-content -->
         </article>
 
         <article>
@@ -81,6 +88,18 @@
             <summary class="details-code-summary">[JavaScript Inserts]</summary>
             <pre class="details-code-aclass">
 INSERT CODE
+let a = 10
+
+if (a &lt; 10) { 
+  console.log(a) 
+  console.log(a * a) 
+} else if (a> 10) {
+  console.log(a * a * a);
+} else if (a == 10) {
+  console.log("equal")
+} else {
+  console.log("end")
+}
               </pre><!-- code-content -->
           </details><!--details CODE-->
 
@@ -89,11 +108,9 @@ INSERT CODE
           <details open><!--Details CONSOLE -->
             <summary class="details-console-summary">[JavaScript Inserts]</summary>
             <pre class="details-console-aclass small-view">
-INSERT CONSOLE OUTPUT (small view) 
-              </pre><!-- small-view -->
+equal </pre><!-- small-view -->
             <pre class="details-console-aclass wide-view">
-INSERT CONSOLE OUTPUT (wide view) 
-              </pre><!-- wide-view -->
+equal </pre><!-- wide-view -->
           </details><!--details CONSOLE -->
         </article>
 
